--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AIceberg Mind</title>
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
   
   <!-- SEO META TAGS -->
@@ -76,13 +76,12 @@
 	  <span class="arrow">↓</span>
       <p>Dive in</p>
     </div>
-  <div class="iceberg-fixed-layer">
     <div class="iceberg-top"><img src="images/iceberg_top.svg" /></div>
 </header>
 
 <nav class="sticky-menu" id="main-menu">
   <ul>
-    <li><a href="#intro">Why Aiceberg Mind</a></li>
+    <li><a href="#intro">Aiceberg Mind</a></li>
 	    <li><a href="#Concept">Concept</a></li>
     <li><a href="#mission">Mission</a></li>
     <li><a href="#vision">Vision</a></li>
@@ -95,18 +94,27 @@
   </ul>
 </nav>
 <main>
+<div class="iceberg-down">
+  <img src="images/iceberg_down.svg" alt="Iceberg Down">
+</div> 
+
+
+
 <div class="deep-background active"></div>
 <div id="particles-background"></div>
+
 <!-- 1. intro -->
-  <div class="intro-wave-top"></div> 
-<section class="intro-section" id="intro">
+
+<section class="intro-section" id="intro">  
+<div class="intro-wave-top"></div>
+
 	<canvas id="ai-pattern"></canvas>
 	<div class="ai-curve"></div>
 
   <div class="content-grid">
     <div class="text-block">
-      <h2>Aiceberg Mind?</h2>
-      <p class="tagline">Awakening minds from the earliest years</p>
+      <h1>Awakening minds</h1>
+      <h2 class="tagline"> from the earliest years</h2>
       <p>
         Aiceberg Mind is much more than a digital educational production company.  
         It's a project of heart and science, born to support parents in their most essential mission:  
@@ -142,39 +150,45 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-<!-- AICEBERG CONCEPT SECTION -->
 <section class="content-block" id="concept">
   <div class="content-grid">
-    <div class="text-block">
-      <h2>The Aiceberg Concept</h1>
-      <h2><strong>Why "Aiceberg"?</strong></h2>
+    <div class="text-block concept-block">
+      <h1>The Aiceberg Concept</h1>
       <p>
         Aiceberg Mind embodies the alliance between artificial intelligence and the depth of educational knowledge.
         Its name symbolizes pedagogy on two levels: the alliance between AI and educational depth.
       </p>
 
-      <h3>The visible part: visible, attractive, immersive</h3>
-      <div class="accordion-block">
+      <h2 class="accordion-header open">
+        The visible part: visible, attractive, immersive
+        <i class="fa-solid fa-chevron-up arrow up"></i>
+      </h2>
+      <div class="accordion-block open">
         <p>What the public sees first:</p>
         <ul>
-          <li>Content that is playful, visually engaging and interactive</li>
-          <li>Generated or enhanced by generative AI</li>
-          <li>Designed to capture children's attention and foster natural and intuitive learning</li>
+          <li style="animation-delay: 0.2s">Content that is playful, visually engaging and interactive</li>
+          <li style="animation-delay: 0.4s">Generated or enhanced by generative AI</li>
+          <li style="animation-delay: 0.6s">Designed to capture children's attention and foster natural and intuitive learning</li>
         </ul>
         <p>
           <em>For a joyful, free, curious, creative, sociable and autonomous child — the visible expression of harmonious development.</em>
         </p>
       </div>
-
-      <h3>The hidden part: invisible but essential</h3>
+	  <div id="concept-waypoint" style="position: relative; top: 80vh; height: 1px;"></div>
+<div class="waypoint" id="trigger-second-accordion"></div>
+<div class="waypoint" id="exit-accordion"></div>
+      <h2 class="accordion-header">
+        The hidden part: invisible but essential
+        <i class="fa-solid fa-chevron-down arrow down"></i>
+      </h2>
       <div class="accordion-block">
         <p>What we don't see... but which constitutes the invisible foundation of each creation. Rigorous research work, nourished by:</p>
         <ul>
-          <li>📚 The great foundations of child psychology</li>
-          <li>🧠 Advances in neuroscience and cognitive sciences</li>
-          <li>🧩 Subconscious programming during the first 7 years of life</li>
-          <li>🧘‍♀️ Conscious parenting and emotional support techniques</li>
-          <li>🎯 An integrative vision that connects science, parental intuition and technological innovation</li>
+          <li style="animation-delay: 0.2s">📚 The great foundations of child psychology</li>
+          <li style="animation-delay: 0.4s">🧠 Advances in neuroscience and cognitive sciences</li>
+          <li style="animation-delay: 0.6s">🧩 Subconscious programming during the first 7 years of life</li>
+          <li style="animation-delay: 0.8s">🧘‍♀️ Conscious parenting and emotional support techniques</li>
+          <li style="animation-delay: 1s">🎯 An integrative vision that connects science, parental intuition and technological innovation</li>
         </ul>
         <p>
           Solid educational foundations programmed from the first years of life as an invisible but fundamental base.
@@ -182,8 +196,85 @@ document.addEventListener("DOMContentLoaded", () => {
       </div>
     </div>
   </div>
-  </div>
 </section>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const concept = document.querySelector("#concept");
+  const headers = concept.querySelectorAll(".accordion-header");
+  const accordions = concept.querySelectorAll(".accordion-block");
+  const waypointSecond = document.querySelector("#concept-waypoint");
+  let hasEnteredOnce = false;
+  let state = "closed";
+
+  // CLICK MANUALE: toggle accordion + chiusura dell’altro
+  headers.forEach((header, index) => {
+    header.addEventListener("click", () => {
+      const isOpen = accordions[index].classList.contains("open");
+
+      // Chiude tutto
+      headers.forEach(h => h.classList.remove("open"));
+      accordions.forEach(a => a.classList.remove("open"));
+
+      // Apre solo se prima era chiuso
+      if (!isOpen) {
+        accordions[index].classList.add("open");
+        headers[index].classList.add("open");
+      }
+    });
+  });
+
+  // ENTRATA sezione (una sola volta)
+  const conceptObserver = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting && !hasEnteredOnce) {
+        headers[0].classList.add("open");
+        accordions[0].classList.add("open");
+        state = "first-open";
+        hasEnteredOnce = true;
+      }
+    });
+  }, { threshold: 0.4 });
+
+  // WAYPOINT per aprire secondo accordion
+  const secondObserver = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        // Chiudi il primo, apri il secondo
+        headers[0].classList.remove("open");
+        accordions[0].classList.remove("open");
+        headers[1].classList.add("open");
+        accordions[1].classList.add("open");
+        state = "second-open";
+      } else if (entry.boundingClientRect.top > 0) {
+        // Scroll up verso alto
+        headers.forEach(h => h.classList.remove("open"));
+        accordions.forEach(a => a.classList.remove("open"));
+        state = "closed";
+      }
+    });
+  }, { threshold: 0.5 });
+
+  // USCITA completa dalla sezione: chiudi tutto
+  const exitObserver = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (!entry.isIntersecting) {
+        headers.forEach(h => h.classList.remove("open"));
+        accordions.forEach(a => a.classList.remove("open"));
+        state = "closed";
+      }
+    });
+  }, { threshold: 0.3 });
+
+  if (concept) conceptObserver.observe(concept);
+  if (waypointSecond) secondObserver.observe(waypointSecond);
+  if (concept) exitObserver.observe(concept);
+});
+</script>
+
+
+
+
+
 
 
 
@@ -534,28 +625,7 @@ document.addEventListener("scroll", () => {
     });
   });
 </script>
-<script>
-  window.addEventListener('scroll', () => {
-    const scrollY = window.scrollY;
-    const maxScroll = window.innerHeight;
 
-    const progress = Math.min(scrollY / maxScroll, 1);
-
-    // Titolo e sottotitolo si alzano
-    const heroTitle = document.querySelector('.hero-title');
-    const subtitle = document.querySelector('.subtitle');
-    const tagline = document.querySelector('.tagline');
-
-    heroTitle.style.transform = `translateY(${progress * -80}px)`;
-    subtitle.style.transform = `translateY(${progress * -100}px)`;
-    tagline.style.transform = `translateY(${progress * -120}px)`;
-
-    // Iceberg cresce ma resta in basso
-    const iceberg = document.querySelector('.iceberg-top');
-    const scale = 1 + progress * 1.3; // da 1 a 2.5
-    iceberg.style.transform = `translateX(-50%) scale(${scale})`;
-  });
-</script>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const container = document.getElementById("particles-background");
