--- a/index.html
+++ b/index.html
@@ -61,14 +61,24 @@
   }
 }
 </script>
+
+
 </head>
+
+
 <body>
 
 <!-- 1. HERO SECTION (parte visibile dell'iceberg) -->
 <header class="hero" id="hero">
   <div class="hero-content">
+<div class="logo logotype">
+  <img src="images/logo/logotext.svg" alt="Aiceberg Mind Logo">
+</div>
+
   <p class="tagline">Where AI meets human depth</p>
-    <h1 class="hero-title">AI<span class="slide-in">ceberg</span> Mind</h1>
+    <h1 class="hero-title">
+  <span class="highlighted-ai">AI</span><span class="text-rest">ceberg Mind</span>
+</h1>
 	
     <p class="subtitle">Educational resources nourished by science, powered by AI.</p>
   </div>
@@ -164,6 +174,10 @@
 
 
 <nav class="sticky-menu" id="main-menu">
+<div class="logo logotype sticky-logo">
+  <img src="images/logo/logotype.svg" alt="Aiceberg Mind Logo">
+</div>
+
   <ul>
     <li><a href="#intro">Aiceberg Mind</a></li>
 	<li><a href="#concept">Concept</a></li>
@@ -188,13 +202,13 @@
 <div class="deep-background active"></div>
 <div id="particles-background"></div>
 
-<!-- 1. intro -->
+<!-- intro -->
 
 <section class="intro-section" id="intro">  
 <div class="intro-wave-top"></div>
 
-	<canvas id="ai-pattern"></canvas>
-	<div class="ai-curve"></div>
+	<!-- <canvas id="ai-pattern"></canvas>
+	<div class="ai-curve"></div>-->
 
   <div class="content-grid">
     <div class="text-block">
@@ -208,6 +222,7 @@
     </div>  
   </div>
 </section>
+
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const textBlock = document.querySelector("#intro .text-block");
@@ -266,6 +281,11 @@ window.addEventListener("scroll", () => {
 
 
 
+
+
+
+
+<!-- Concept -->
 
 <section class="content-block" id="concept">
   <div class="content-grid">
@@ -398,7 +418,8 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-<!-- 1A. MISSION -->
+
+<!-- MISSION -->
 <section class="content-block" id="mission">
   <div class="content-grid">
     <div class="text-block">
@@ -414,7 +435,13 @@ document.addEventListener("DOMContentLoaded", () => {
   </div>
 </section>
 
-<!-- 1A. VISION -->
+
+
+
+
+
+
+<!-- VISION -->
 <section class="content-block" id="vision">
   <div class="content-grid">
     <div class="text-block">
@@ -439,7 +466,11 @@ document.addEventListener("DOMContentLoaded", () => {
 </section>
 
 
-<!-- 3. CONCEPT SECTION -->
+
+
+
+
+<!-- 3. APPROACH SECTION -->
 <section class="content-block" id="approach">
   <div class="content-grid">
     <div class="text-block">
@@ -470,25 +501,59 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- 4. TEAM SECTION -->
 <section class="content-block" id="team">
-  <div class="content-grid">
-    <div class="text-block">
-      <h2>Our Team</h2>
+  <div class="content-grid founders-grid">
+    <div class="founder-card">
+      <div class="founder-avatar">
+        <img src="https://via.placeholder.com/150" alt="Avatar Research Director">
+      </div>
+      <div class="founder-flag">🇮🇹</div>
+      <h3>Research Director & Educational Technology Expert</h3>
       <p>
-        Behind Aiceberg Mind is a Franco-Italian collective of researchers, creatives and technologists united by one goal:
-        creating tools to shape the inner world of the next generation.
+        Italian researcher, specialist in digital tools applied to learning, he directs Aiceberg Mind's technological and methodological projects.
       </p>
       <ul>
-        <li><strong>Digital & AI Research Lead</strong> – develops intelligent tools and adaptive content models</li>
-        <li><strong>Neuroscience & Education Specialist</strong> – ensures alignment with early childhood cognitive development</li>
-        <li><strong>Multimedia Designers</strong> – craft visuals, narratives and interfaces for playful learning</li>
-        <li><strong>Writers & Audio Producers</strong> – transform science into story, rhythm and voice</li>
+        <li>🧠 Expert in AI applied to pedagogy</li>
+        <li>🎓 Leader in transdisciplinary research</li>
+        <li>🛠️ Creator of digital learning tools</li>
+        <li>🌍 Brings an international, scientific vision</li>
       </ul>
+    </div>
+
+    <div class="founder-card">
+      <div class="founder-avatar">
+        <img src="https://via.placeholder.com/150" alt="Avatar Neuroscience Specialist">
+      </div>
+      <div class="founder-flag">🇫🇷</div>
+      <h3>Neuroscience and Child Development Specialist</h3>
       <p>
-        Together, we turn abstract science into tangible magic for children and their families.
+        French professional in education and conscious parenting, she designs content based on the latest research in neuroscience and psychology.
       </p>
+      <ul>
+        <li>🧠 Specialized in child brain development (0–7)</li>
+        <li>🧘‍♀️ Practitioner in emotional techniques</li>
+        <li>📚 Trained in subconscious programming</li>
+        <li>🎯 Designs tools for harmonious growth</li>
+        <li>🤝 Supports parents and educators daily</li>
+      </ul>
     </div>
   </div>
+
+  <div class="text-block team-vision">
+    <p>
+      🧩 <strong>An AI + Human Sciences synergy for modern pedagogy</strong><br>
+      Together, they design content that is scientifically grounded, designed for families, and powered by technology — a hybrid approach between machine learning and emotional intelligence, to build tools that are ethical, relevant and deeply human.
+    </p>
+  </div>
 </section>
+
+
+
+
+
+
+
+
+
 
 <!-- 5. TARGET SECTION -->
 <section class="content-block" id="target">
@@ -1182,7 +1247,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   function resetIdleTimer() {
     clearTimeout(idleTimer);
-    idleTimer = setTimeout(enterEnergySaver, 10000); // 10 secondi per test
+    idleTimer = setTimeout(enterEnergySaver, 160000); // 10 secondi per test1
     console.log("⏳ Timer reset");
   }
 
