--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
 <div class="deep-background active"></div>
-<div id="particles-background"></div>
+<canvas id="particles-background"></canvas>
 
 <!-- intro -->
 
@@ -844,88 +844,325 @@ document.addEventListener("scroll", () => {
     });
   });
 </script>
+<div class="content">
+    <h1>Neural Network Visualization</h1>
+    <p>Una rappresentazione dinamica di una rete neurale con particelle interconnesse che simulano l'attivazione e la trasmissione di segnali neurali.</p>
+</div>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const container = document.getElementById("particles-background");
-  const canvas = document.createElement("canvas");
-  const ctx = canvas.getContext("2d");
+    class NeuralNetwork {
+        constructor() {
+            this.canvas = document.getElementById('particles-background');
+            this.ctx = this.canvas.getContext('2d');
+            this.particles = [];
+            this.connections = [];
+            this.codes = [];
+            this.mouse = { x: 0, y: 0 };
+            this.animationId = null;
 
-  Object.assign(canvas.style, {
-    position: "absolute",
-    top: 0,
-    left: 0,
-    width: "100%",
-    height: "100%",
-    zIndex: "-10",
-    pointerEvents: "none"
-  });
+            this.config = {
+                particleCount: 80,
+                maxDistance: 120,
+                particleSize: 3,
+                particleSpeed: 0.5,
+                connectionOpacity: 0.6,
+                pulseSpeed: 0.02,
+                codeCount: 15,
+                codeSpeed: 0.3,
+                colors: {
+                    particles: ['#888888', '#999999', '#777777', '#666666', '#aaaaaa'],
+                    connections: '#888888',
+                    codes: '#666666'
+                }
+            };
 
-  container.appendChild(canvas);
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-
-  window.addEventListener("resize", () => {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-  });
-
-  const particles = [];
-  const numParticles = 80;
-  const connectDistance = 120;
-
-  for (let i = 0; i < numParticles; i++) {
-    particles.push({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height,
-      radius: Math.random() * 2 + 1,
-      dx: (Math.random() - 0.5) * 0.5,
-      dy: (Math.random() - 0.5) * 0.5
-    });
-  }
-
-  function drawLines() {
-    for (let i = 0; i < particles.length; i++) {
-      for (let j = i + 1; j < particles.length; j++) {
-        const dx = particles[i].x - particles[j].x;
-        const dy = particles[i].y - particles[j].y;
-        const dist = Math.sqrt(dx * dx + dy * dy);
-
-        if (dist < connectDistance) {
-          ctx.beginPath();
-          ctx.strokeStyle = `rgba(0, 70, 80, ${1 - dist / connectDistance})`;
-          ctx.lineWidth = 0.5;
-          ctx.moveTo(particles[i].x, particles[i].y);
-          ctx.lineTo(particles[j].x, particles[j].y);
-          ctx.stroke();
+            this.time = 0;
+            this.init();
         }
-      }
+
+        init() {
+            this.resizeCanvas();
+            this.createParticles();
+            this.createCodes();
+            this.bindEvents();
+            this.animate();
+        }
+
+        resizeCanvas() {
+            this.canvas.width = window.innerWidth;
+            this.canvas.height = window.innerHeight;
+        }
+
+        generateRandomCode() {
+            const types = ['binary', 'hex', 'alpha'];
+            const type = types[Math.floor(Math.random() * types.length)];
+
+            switch(type) {
+                case 'binary':
+                    return Array.from({length: 6 + Math.floor(Math.random() * 6)}, () => Math.random() < 0.5 ? '0' : '1').join('');
+                case 'hex':
+                    const hexChars = '0123456789ABCDEF';
+                    return Array.from({length: 4 + Math.floor(Math.random() * 4)}, () => hexChars[Math.floor(Math.random() * hexChars.length)]).join('');
+                case 'alpha':
+                    const alphaChars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+                    return Array.from({length: 3 + Math.floor(Math.random() * 4)}, () => alphaChars[Math.floor(Math.random() * alphaChars.length)]).join('');
+                default:
+                    return '101010';
+            }
+        }
+
+        createCodes() {
+            this.codes = [];
+            for (let i = 0; i < this.config.codeCount; i++) {
+                this.codes.push({
+                    x: Math.random() * this.canvas.width,
+                    y: Math.random() * this.canvas.height,
+                    vx: (Math.random() - 0.5) * this.config.codeSpeed,
+                    vy: (Math.random() - 0.5) * this.config.codeSpeed,
+                    text: this.generateRandomCode(),
+                    opacity: 0.3 + Math.random() * 0.4,
+                    life: 300 + Math.random() * 200,
+                    maxLife: 300 + Math.random() * 200,
+                    size: 10 + Math.random() * 4
+                });
+            }
+        }
+
+        createParticles() {
+            this.particles = [];
+            for (let i = 0; i < this.config.particleCount; i++) {
+                this.particles.push({
+                    x: Math.random() * this.canvas.width,
+                    y: Math.random() * this.canvas.height,
+                    vx: (Math.random() - 0.5) * this.config.particleSpeed,
+                    vy: (Math.random() - 0.5) * this.config.particleSpeed,
+                    size: Math.random() * this.config.particleSize + 1,
+                    color: this.config.colors.particles[Math.floor(Math.random() * this.config.colors.particles.length)],
+                    pulse: Math.random() * Math.PI * 2,
+                    activity: Math.random()
+                });
+            }
+        }
+
+        bindEvents() {
+            window.addEventListener('resize', () => {
+                this.resizeCanvas();
+                this.createParticles();
+                this.createCodes();
+            });
+
+            this.canvas.addEventListener('mousemove', (e) => {
+                this.mouse.x = e.clientX;
+                this.mouse.y = e.clientY;
+            });
+
+            this.canvas.addEventListener('mouseleave', () => {
+                this.mouse.x = -1000;
+                this.mouse.y = -1000;
+            });
+        }
+
+        updateParticles() {
+            this.particles.forEach(particle => {
+                // Movimento base
+                particle.x += particle.vx;
+                particle.y += particle.vy;
+
+                // Effetto mouse
+                const dx = this.mouse.x - particle.x;
+                const dy = this.mouse.y - particle.y;
+                const distance = Math.sqrt(dx * dx + dy * dy);
+
+                if (distance < 100) {
+                    const force = (100 - distance) / 100;
+                    particle.vx += dx * force * 0.001;
+                    particle.vy += dy * force * 0.001;
+                    particle.activity = Math.min(1, particle.activity + 0.02);
+                } else {
+                    particle.activity = Math.max(0, particle.activity - 0.005);
+                }
+
+                // Limitazione velocità
+                const speed = Math.sqrt(particle.vx * particle.vx + particle.vy * particle.vy);
+                if (speed > 2) {
+                    particle.vx = (particle.vx / speed) * 2;
+                    particle.vy = (particle.vy / speed) * 2;
+                }
+
+                // Bordi del canvas
+                if (particle.x < 0 || particle.x > this.canvas.width) {
+                    particle.vx *= -1;
+                    particle.x = Math.max(0, Math.min(this.canvas.width, particle.x));
+                }
+                if (particle.y < 0 || particle.y > this.canvas.height) {
+                    particle.vy *= -1;
+                    particle.y = Math.max(0, Math.min(this.canvas.height, particle.y));
+                }
+
+                // Aggiornamento pulsazione
+                particle.pulse += this.config.pulseSpeed;
+            });
+        }
+
+        updateCodes() {
+            this.codes.forEach((code, index) => {
+                // Movimento
+                code.x += code.vx;
+                code.y += code.vy;
+
+                // Vita del codice
+                code.life--;
+                code.opacity = (code.life / code.maxLife) * 0.7;
+
+                // Bordi del canvas
+                if (code.x < -50 || code.x > this.canvas.width + 50) {
+                    code.vx *= -1;
+                }
+                if (code.y < -20 || code.y > this.canvas.height + 20) {
+                    code.vy *= -1;
+                }
+
+                // Rigenera codice se morto
+                if (code.life <= 0) {
+                    code.x = Math.random() * this.canvas.width;
+                    code.y = Math.random() * this.canvas.height;
+                    code.text = this.generateRandomCode();
+                    code.life = code.maxLife;
+                    code.opacity = 0.3 + Math.random() * 0.4;
+                }
+
+                // Cambia codice occasionalmente
+                if (Math.random() < 0.001) {
+                    code.text = this.generateRandomCode();
+                }
+            });
+        }
+
+        drawConnections() {
+            this.ctx.strokeStyle = this.config.colors.connections;
+            this.ctx.lineWidth = 1;
+
+            for (let i = 0; i < this.particles.length; i++) {
+                for (let j = i + 1; j < this.particles.length; j++) {
+                    const p1 = this.particles[i];
+                    const p2 = this.particles[j];
+
+                    const dx = p1.x - p2.x;
+                    const dy = p1.y - p2.y;
+                    const distance = Math.sqrt(dx * dx + dy * dy);
+
+                    if (distance < this.config.maxDistance) {
+                        const opacity = (1 - distance / this.config.maxDistance) * this.config.connectionOpacity;
+                        const activity = (p1.activity + p2.activity) / 2;
+
+                        // Effetto pulsazione nelle connessioni
+                        const pulse = Math.sin(this.time * 0.01 + distance * 0.01) * 0.3 + 0.7;
+
+                        this.ctx.globalAlpha = opacity * pulse * (0.3 + activity * 0.7);
+                        this.ctx.beginPath();
+                        this.ctx.moveTo(p1.x, p1.y);
+                        this.ctx.lineTo(p2.x, p2.y);
+                        this.ctx.stroke();
+
+                        // Segnali neurali che viaggiano lungo le connessioni
+                        if (Math.random() < 0.001 + activity * 0.01) {
+                            this.drawNeuralSignal(p1, p2, distance);
+                        }
+                    }
+                }
+            }
+        }
+
+        drawNeuralSignal(p1, p2, distance) {
+            const progress = (this.time * 0.02) % 1;
+            const x = p1.x + (p2.x - p1.x) * progress;
+            const y = p1.y + (p2.y - p1.y) * progress;
+
+            this.ctx.globalAlpha = Math.sin(progress * Math.PI) * 0.8;
+            this.ctx.fillStyle = '#cccccc';
+            this.ctx.beginPath();
+            this.ctx.arc(x, y, 2, 0, Math.PI * 2);
+            this.ctx.fill();
+        }
+
+        drawParticles() {
+            this.particles.forEach(particle => {
+                const pulseScale = 1 + Math.sin(particle.pulse) * 0.3 * particle.activity;
+                const size = particle.size * pulseScale;
+
+                // Glow effect grigio
+                this.ctx.shadowColor = particle.color;
+                this.ctx.shadowBlur = 10 + particle.activity * 15;
+
+                // Corpo principale
+                this.ctx.globalAlpha = 0.7 + particle.activity * 0.3;
+                this.ctx.fillStyle = particle.color;
+                this.ctx.beginPath();
+                this.ctx.arc(particle.x, particle.y, size, 0, Math.PI * 2);
+                this.ctx.fill();
+
+                // Nucleo leggermente più chiaro
+                this.ctx.globalAlpha = 0.9;
+                this.ctx.fillStyle = '#bbbbbb';
+                this.ctx.beginPath();
+                this.ctx.arc(particle.x, particle.y, size * 0.3, 0, Math.PI * 2);
+                this.ctx.fill();
+
+                this.ctx.shadowBlur = 0;
+            });
+        }
+
+        drawCodes() {
+            this.ctx.font = '12px "Courier New", monospace';
+            this.ctx.textAlign = 'center';
+            this.ctx.textBaseline = 'middle';
+
+            this.codes.forEach(code => {
+                this.ctx.globalAlpha = code.opacity;
+                this.ctx.fillStyle = this.config.colors.codes;
+
+                // Effetto leggero glow per i codici
+                this.ctx.shadowColor = this.config.colors.codes;
+                this.ctx.shadowBlur = 5;
+
+                this.ctx.fillText(code.text, code.x, code.y);
+
+                this.ctx.shadowBlur = 0;
+            });
+        }
+
+        animate() {
+            this.ctx.clearRect(0, 0, this.canvas.width, this.canvas.height);
+
+            this.updateParticles();
+            this.updateCodes();
+            this.drawConnections();
+            this.drawParticles();
+            this.drawCodes();
+
+            this.time++;
+            this.animationId = requestAnimationFrame(() => this.animate());
+        }
+
+        destroy() {
+            if (this.animationId) {
+                cancelAnimationFrame(this.animationId);
+            }
+            window.removeEventListener('resize', this.resizeCanvas);
+            this.canvas.removeEventListener('mousemove', this.mouseMoveHandler);
+            this.canvas.removeEventListener('mouseleave', this.mouseLeaveHandler);
+        }
     }
-  }
 
-  function animate() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    
-    for (let p of particles) {
-      p.x += p.dx;
-      p.y += p.dy;
+    // Inizializzazione
+    const neuralNetwork = new NeuralNetwork();
 
-      if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
-      if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
-
-      ctx.beginPath();
-      ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-      ctx.fillStyle = "rgba(0, 70, 80, 0.15)";
-      ctx.fill();
-    }
-
-    drawLines();
-    requestAnimationFrame(animate);
-  }
-
-  animate();
-});
+    // Cleanup quando la pagina viene chiusa
+    window.addEventListener('beforeunload', () => {
+        neuralNetwork.destroy();
+    });
 </script>
+
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const triggers = document.querySelectorAll("#concept h3");
@@ -973,37 +1210,7 @@ draw();
 </script>
 
 
-<!-- PINGUINO NON CONTROLLATO
-<script>
-const penguin = document.querySelector('.penguin-mascot');
-const bodyHeight = document.querySelector('body').offsetHeight;
-const viewportHeight = window.innerHeight;
 
-window.addEventListener('scroll', () => {
-  const scrollY = window.scrollY;
-
-  // 1. Appare appena scrolli leggermente
-  if (scrollY > 20 && scrollY < bodyHeight) {
-    penguin.classList.add('visible');
-
-    // Galleggia in avanti con effetto parallax leggero
-    const forward = Math.min((scrollY / bodyHeight) * 50, 50);
-    penguin.style.transform = `translate(30px, ${-forward}px) rotate(${forward / 2}deg)`;
-
-  } else if (scrollY >= heroHeight) {
-    // 2. Inizia l'immersione dopo l'hero
-    const diveDepth = Math.min((scrollY - bodyHeight) * 0.6, viewportHeight);
-    penguin.classList.add('visible');
-    penguin.style.transform = `translate(20px, ${diveDepth}px) rotate(40deg)`;
-
-  } else {
-    // 3. Torna invisibile sopra
-    penguin.classList.remove('visible');
-    penguin.style.transform = 'translateY(30px)';
-  }
-});
-</script>
--->
 
 <script>
 // SCRIPT 1 – PINGUINO (movimento, galleggiamento, rotazione)
